# cautious-giggle

foundry/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.git  MANIFEST.in  README.md  docker-compose.git.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
foundry/documentation/: ADDING_CUSTOM_MODELS.md  QUICK_START.md  README.md
foundry/examples/: README.md  __init__.py  conversion_prediction.py  conversion_prediction_with_pipeline.py
foundry/ml_framework/: __init__.py  cli.py
foundry/ml_framework/artifacts/: __init__.py  artifact_store.py
foundry/ml_framework/config/: __init__.py
foundry/ml_framework/data/: __init__.py  pipeline.py
foundry/ml_framework/data/loaders/: __init__.py  base_loader.py  csv_loader.py
foundry/ml_framework/data/transformers/: __init__.py  base_transformer.py  simple_transformer.py
foundry/ml_framework/deployment/: __init__.py  base_deployer.py
foundry/ml_framework/impact/: __init__.py  metrics_collector.py
foundry/ml_framework/models/: __init__.py  auto.py  base_model.py  trainer.py  training_arguments.py
foundry/ml_framework/models/wrappers/: __init__.py  sklearn_wrapper.py
foundry/ml_framework/schemas/: __init__.py
foundry/ml_framework/utils/: __init__.py
foundry/tests/: __init__.py  conftest.py
foundry/tests/unit/: __init__.py  test_artifacts.py  test_data_loaders.py  test_models.py  test_pipeline.py  test_transformers.py
