[tool.poetry]
name = "ml-framework"
version = "0.1.0"
description = "ML Framework for Data Scientists - Enables reproducible ML workflows"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ml_framework"}]

[tool.poetry.scripts]
ml-framework = "ml_framework.cli:cli"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.0"
scikit-learn = "^1.4.0"
pydantic = "^2.5.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
joblib = "^1.3.2"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

